# rbittorrent

./: .gitignore  Cargo.toml  README.md
examples/: download.rs
src/: bencode.rs  builder.rs  lib.rs  main.rs  peer.rs  task.rs  torrent.rs
src/message/: bitfield.rs  handshake.rs  mod.rs  request.rs
